# spacy-models

./: .dir-locals.el  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile  Pipfile  README.md  hf-push  preprocess  project.yml  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  train
.github/workflows/: release-please.yml  test.yml
configs/: default.cfg  default_trf.cfg  dep-dist-base.cfg  dep-lg-base.cfg  dwds-dist.cfg  dwds-lg.cfg  hdt-dist.cfg  hdt-lg.cfg  ner-d-dist.cfg  ner-d-lg.cfg  ner-dist-base.cfg  ner-lg-base.cfg  wikiner-dist.cfg  wikiner-lg.cfg
dataset/: ner-d.dev.tsv.bz2  ner-d.test.tsv.bz2
de-core-hdt-dist/: project.yml
de-core-hdt-dist/configs/: core.cfg  dep-base.cfg  ner-base.cfg
de-core-hdt-lg/: project.yml
de-core-hdt-lg/configs/: core.cfg  dep.cfg  ner.cfg
de-core-hdt-trf/: project.yml
de-core-hdt-trf/configs/: core.cfg  dep.cfg  ner.cfg
de-dep-hdt-dist/: project.yml
de-dep-hdt-dist/configs/: base.cfg
de-dep-hdt-electra/: project.yml
de-dep-hdt-electra/configs/: base.cfg
de-dep-hdt-lg/: project.yml
de-dep-hdt-lg/configs/: base.cfg
de-dep-hdt-sm/: project.yml
de-dep-hdt-sm/configs/: base.cfg
de-dep-hdt-trf/: project.yml
de-dep-hdt-trf/configs/: base.cfg
de-ner-wiki-dist/: project.yml
de-ner-wiki-dist/configs/: default.cfg
de-ner-wiki-lg/configs/: default.cfg
evidence/: README.md
evidence/configs/: base_trf.cfg  default.cfg  default_trf.cfg
hdt/: project.yml  requirements.txt
hdt/configs/: de_dep_hdt_md.cfg  de_dep_hdt_sm.cfg  de_dep_hdt_trf.cfg
hdt/configs/base/: de_dep_hdt_dist.cfg  de_dep_hdt_md.cfg  de_dep_hdt_sm.cfg  de_dep_hdt_trf.cfg
hdt/metrics/: de_dep_hdt_dist.dwds.json  de_dep_hdt_dist.hdt.json  de_dep_hdt_lg.dwds.json  de_dep_hdt_lg.hdt.json  de_dep_hdt_sm.dwds.json  de_dep_hdt_sm.hdt.json  de_dep_hdt_trf.hdt.json
hdt/scripts/: copy_files.py
scripts/: hf-push.py  sample.py  split_data.py
spacy_models/: build.py  env.py  util.py
spacy_models/datasets/: dwdswb.py  hdt.py  lemmatizer.py  ner_d.py
tests/: test_load.py
zdl_spacy/: __init__.py  build.py  dataset.py
