[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spacy-models"
description = "German spaCy models trained on German UD-HDT and on a collection of gold and silver standard NER corpora"
authors = [
    {name = "René Knaebel", email = "rknaebel@uni-potsdam.de"},
    {name = "Luise Köhler", email = "luise.koehler@bbaw.de"},
    {name = "Gregor Middell", email = "gregor.middell@bbaw.de"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.12"
dynamic = ["readme", "version"]
dependencies = [
    "build",
    "jsonstream",
    "spacy[transformers,cuda12x]==3.8.7",
    "wasabi"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-bugbear",
    "isort",
    "mypy",
    "pre-commit",
    "pytest",
    "twine",
]

[project.scripts]
spacy-models-build = "zdl_spacy.build:main"
spacy-models-dataset = "zdl_spacy.dataset:main"

[project.urls]
Homepage = "https://github.com/zentrum-lexikographie/spacy-models"

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "zdl_spacy.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
