[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spacy-models"
description = "German spaCy models trained on German UD-HDT and on a collection of gold and silver standard NER corpora"
authors = [
    {name = "René Knaebel", email = "rknaebel@uni-potsdam.de"},
    {name = "Luise Köhler", email = "luise.koehler@bbaw.de"},
    {name = "Gregor Middell", email = "gregor.middell@bbaw.de"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.12"
dynamic = ["readme", "version"]
dependencies = [
    "build",
    "cupy-cuda12x",
    "jsonstream",
    "spacy[transformers]"
]

[project.optional-dependencies]
datasets = [
    "de_zdl_lg @ https://repo.zdl.org/repository/pypi/packages/de-zdl-lg/3.0.0/de_zdl_lg-3.0.0-py3-none-any.whl",
    "dwdsmor",
    "lxml",
    "tqdm",
]
dev = [
    "flake8",
    "flake8-bugbear",
    "isort",
    "mypy",
    "pre-commit",
    "pytest",
    "twine",
]

[project.scripts]
spacy-models-build = "spacy_models.build:main"
spacy-models-lemma-dataset = "spacy_models.datasets.lemmatizer:main"
spacy-models-ner-dataset = "spacy_models.datasets.ner:main"

[project.urls]
Homepage = "https://github.com/zentrum-lexikographie/spacy-models"

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "spacy_models.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
