[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spacy-models"
version = "0.0.0"
description = "German spaCy models trained on UD-HDT and custom datasets for NER and lemmatization"
authors = [
    {name = "René Knaebel", email = "rknaebel@uni-potsdam.de"},
    {name = "Luise Köhler", email = "luise.koehler@bbaw.de"},
    {name = "Gregor Middell", email = "gregor.middell@bbaw.de"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.12"
dynamic = ["readme"]
dependencies = [
    "build",
    "dwdsmor",
    "jsonstream",
    "lxml",
    "requests",
    "spacy[cuda12x,transformers]",
    "transformers>=3.4.0,<4.53.3",
    "twine"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-bugbear",
    "isort",
    "mypy",
    "pre-commit",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/zentrum-lexikographie/spacy-models"

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
